# nsfwcheck

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  main.py  qr.py
k8s/nsfwcheck/: Chart.yaml  values.yaml
k8s/nsfwcheck/templates/: _helpers.tpl  deployment.yaml  imagesafe-deployment.yaml  imagesafe-service.yaml  nsfwcheck-deployment.yaml  nsfwcheck-service.yaml  service.yaml  urlsafe-deployment.yaml  urlsafe-service.yaml
scripts/: test-stack.sh
tests/: urls.txt
