[project]
name = "nsfwcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.31",
    "uvicorn>=0.40.0",
]
